--- a/flashcards-basics.yaml
+++ b/flashcards-basics.yaml
@@ -1,12 +1,12 @@
-- question: "What is the capital of France?"
-  answer: "Paris"
-- question: "2 + 2 = ?"
-  answer: "4"
-- question: "What language is this app written in?"
-  answer: "JavaScript"
-- question: "Bootstrap is used for?"
-  answer: "Styling & layout"
-- question: "what is my name?"
-  answer: "Vikas"
-- question: "what is brothers name"
-  answer: "Shwetank"
+- question: "å være(to be)"
+  answer: "er-var-har vært"
+- question: "å bli(to become)"
+  answer: "blir-ble-har blitt"
+- question: "å begynne(to begin)"
+  answer: "begynner-begynte-har begynt"
+- question: "å bestille(to order food etc.)"
+  answer: "bestiller-bestilte-har bestilt"
+- question: "å burde(ought to)"
+  answer: "bør-burde-har burdet"
+- question: "å dra(to go, move, leave; pull)"
+  answer: "drar-dro-har dratt"
