--- a/flashcards-irregular-verbs.yaml
+++ b/flashcards-irregular-verbs.yaml
@@ -2,11 +2,36 @@
   answer: "er-var-har vært"
 - question: "å bli(to become)"
   answer: "blir-ble-har blitt"
+- question: "å be(to pray, to ask)"
+  answer: "ber,bad,har bedt"
 - question: "å begynne(to begin)"
   answer: "begynner-begynte-har begynt"
 - question: "å bestille(to order food etc.)"
   answer: "bestiller-bestilte-har bestilt"
 - question: "å burde(ought to)"
   answer: "bør-burde-har burdet"
+- question: "å bære(to carry)"
+  answer: "bærer,bar,har båret"
 - question: "å dra(to go, move, leave; pull)"
   answer: "drar-dro-har dratt"
+- question: "å drikke(to drink)"
+  answer: "drikker-drakk-har drukket"
+- question: "å finne(to find)"
+  answer: "finner,fant,har funnet"
+- question: "å finnes(to exist)"
+  answer: "finnes-fantes-har funnes"
+- question: "å foretrekke(to prefer)"
+  answer: "foretrekker-foretrakk-har foretrukket"
+- question: "å forstå(to understand)"
+  answer: "forstår-forstod/forsto-har forstått"
+- question: "å fortelle(to tell)"
+  answer: "forteller-fortalte-har fortalt"
+- question: "å få(to get, receive)"
+  answer: "får,fikk,har fått"
+- question: "å gi(to give)"
+  answer: "gir-ga-har gitt"
+- question: "å gjelde(to concern)"
+  answer: "gjelder,gjaldt,har gjeldt"
+- question: "å gjøre(to do)"
+  answer: "gjør,gjorde,har gjort"
+
