--- a/flashcards-irregular-verbs.yaml
+++ b/flashcards-irregular-verbs.yaml
@@ -34,4 +34,77 @@
   answer: "gjelder,gjaldt,har gjeldt"
 - question: "å gjøre(to do)"
   answer: "gjør,gjorde,har gjort"
+- question: "å glede seg(to look forward to)"
+  answer: "gleder seg-gledet seg-har gledet seg"
+- question: "å gråte(to cry, weep)"
+  answer: "gråter-gråt-har grått"
+- question: "å gå(to walk)"
+  answer: "går-gikk-har gått"
+- question: "å ha(to have)"
+  answer: "har-hadde-har hatt"
+- question: "å hete(to be called)"
+  answer: "heter-het-har hett"
+- question: "å hjelpe(to help)"
+  answer: "hjelper-hjalp-har hjulpet"
+- question: "å kjenne(to know (person, place);feel)"
+  answer: "kjenner-kjente-har kjent"
+- question: "å komme(to come)"
+  answer: "kommer-kom-har kommet"
+- question: "å kunne(can)"
+  answer: "kan-kunne-har kunnet"
+- question: "å legge(to put, lay down,refl.: go to bed)"
+  answer: "legger-la-har lagt"
+- question: "å lete(to look for)"
+  answer: "leter-lette-har lett"
+- question: "å ligge(to lied down,be situated)"
+  answer: "ligger-lå-har ligget"
+- question: "å møte(to meet)"
+  answer: "møter-møtte-har møtt"
+- question: "å se(to see)"
+  answer: "ser-så-har sett"
+- question: "å selge(to sell)"
+  answer: "selger-solgte-har solgt"
+- question: "å sende(to send)"
+  answer: "sender-sendte-har sendt"
+- question: "å sette(to put, refl.: sit down)"
+  answer: "setter-satte-har satt"
+- question: "å si(to say)"
+  answer: "sier-sa-har sagt"
+- question: "å skrive(to write)"
+  answer: "skriver-skrev-har skrevet"
+- question: "å skulle(shall, will)"
+  answer: "skal-skulle-har skullet"
+- question: "å skyldes(to cause)"
+  answer: "skyldes-skyldtes-har skyldtes"
+- question: "å sove(to sleep)"
+  answer: "sover-sov-har sovet"
+- question: "å spille(to play [games, sports])"
+  answer: "spiller-spilte-har spilt"
+- question: "å spørre(to ask)"
+  answer: "spør-spurte-har spurt"
+- question: "å stå(to stand)"
+  answer: "står-sto/stod-har stått"
+- question: "å synes(to think, mean, seem)"
+  answer: "synes-syntes-har syntes"
+- question: "å ta(to take)"
+  answer: "tar-tok-har tatt"
+- question: "å tenke(to think)"
+  answer: "tenker-tenkte-har tenkt"
+- question: "å treffe(to meet)"
+  answer: "treffer-traff-har truffet"
+- question: "å trives(to feel fine,enjoy a situation)"
+  answer: "trives-trivdes-har trivdes"
+- question: "å velge(to choose)"
+  answer: "velge-valgte-har valgt"
+- question: "å ville(want to, will)"
+  answer: "vil-ville-har villet"
+- question: "å vite(to know [knowledge])"
+  answer: "vet-visste-har visst"
+- question: "å bestemme(to decide)"
+  answer: "bestemmer-bestemte-har bestemt"
+- question: "å fly(to fly)"
+  answer: "flyr-fløy-har flydd/har fløyet"
+- question: "å vinne(to win)"
+  answer: "vinner-vant-har vunnet"
+
 
