--- a/flashcards-irregular-verbs.yaml
+++ b/flashcards-irregular-verbs.yaml
@@ -3,7 +3,7 @@
 - question: "å bli(to become)"
   answer: "blir-ble-har blitt"
 - question: "å be(to pray, to ask)"
-  answer: "ber,bad,har bedt"
+  answer: "ber-bad-har bedt"
 - question: "å begynne(to begin)"
   answer: "begynner-begynte-har begynt"
 - question: "å bestille(to order food etc.)"
@@ -11,13 +11,13 @@
 - question: "å burde(ought to)"
   answer: "bør-burde-har burdet"
 - question: "å bære(to carry)"
-  answer: "bærer,bar,har båret"
+  answer: "bærer-bar-har båret"
 - question: "å dra(to go, move, leave; pull)"
   answer: "drar-dro-har dratt"
 - question: "å drikke(to drink)"
   answer: "drikker-drakk-har drukket"
 - question: "å finne(to find)"
-  answer: "finner,fant,har funnet"
+  answer: "finner-fant-har funnet"
 - question: "å finnes(to exist)"
   answer: "finnes-fantes-har funnes"
 - question: "å foretrekke(to prefer)"
@@ -27,13 +27,13 @@
 - question: "å fortelle(to tell)"
   answer: "forteller-fortalte-har fortalt"
 - question: "å få(to get, receive)"
-  answer: "får,fikk,har fått"
+  answer: "får-fikk-har fått"
 - question: "å gi(to give)"
   answer: "gir-ga-har gitt"
 - question: "å gjelde(to concern)"
-  answer: "gjelder,gjaldt,har gjeldt"
+  answer: "gjelder-gjaldt-har gjeldt"
 - question: "å gjøre(to do)"
-  answer: "gjør,gjorde,har gjort"
+  answer: "gjør-gjorde-har gjort"
 - question: "å glede seg(to look forward to)"
   answer: "gleder seg-gledet seg-har gledet seg"
 - question: "å gråte(to cry, weep)"
