--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -19,7 +19,7 @@
 - question: "farlig"
   answer: |
     dangerous 
-    Slanger er farlige → snakes are dangerous
+    slanger er farlige → snakes are dangerous
 
 - question: "bekymret"
   answer: |
