random yaml modify

--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -68,3 +68,23 @@
      to last / to continue 
      Hvor lenge varer den? = How long does it last?
 
+- question: "å sprekke "
+  answer: |
+     to crack / to pop 
+     Ja, ballonger som sprekker) 
+
+- question: "å bestå"
+  answer: |
+     to pass (exam / test)
+     Besto du første gangen? → did you pass it in first attempt
+
+- question: "å krangle"
+  answer: |
+     to fight
+
+- question: "å foreslå"
+  answer: |
+     to suggest / to propose / to recommend
+     Han foreslår at vi drar tidlig. 
+     et forslag=a suggestion / a proposal
+     Jeg har et forslag
