random yaml modify

--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -71,7 +71,7 @@
 - question: "å sprekke "
   answer: |
      to crack / to pop 
-     Ja, ballonger som sprekker) 
+     Ja, ballonger som sprekker
 
 - question: "å bestå"
   answer: |
