--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -103,3 +103,8 @@
   answer: |
      unfortunately
 
+- question: "Forresten"
+  answer: |
+     by the way
+     Forresten, jeg så filmen du snakket om i går
+
