--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -103,8 +103,8 @@
   answer: |
      unfortunately
 
-- question: "Forresten"
+- question: "lei av"
   answer: |
-     by the way
-     Forresten, jeg så filmen du snakket om i går
+     tired av
+     Hun er lei av å jobbe hele tiden. → She is tired of working all the time.
 
