--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -105,6 +105,6 @@
 
 - question: "lei av"
   answer: |
-     tired av
+     tired of
      Hun er lei av å jobbe hele tiden. → She is tired of working all the time.
 
