--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -108,3 +108,12 @@
      tired of
      Hun er lei av å jobbe hele tiden. → She is tired of working all the time.
 
+- question: "ei måke"
+  answer: |
+     seagull (ei måke-måker-måkene)
+     Den måka dreit på huet ditt → That seagull pooped on your head
+
+- question: "en drit"
+  answer: |
+     poop/crap (en drit-driter-dritene)
+     å drite → Han driter=He poops.
