--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -117,3 +117,10 @@
   answer: |
      poop/crap (en drit-driter-dritene)
      å drite → Han driter=He poops.
+
+- question: "å lyve"
+  answer: |
+     to lie (lyver-løy-har løyet)
+     ikke lyv → dont lie
+     Vi kan ikke bare fortsette å lyve for ham.
+
