--- a/flashcards-irregular-verbs.yaml
+++ b/flashcards-irregular-verbs.yaml
@@ -106,5 +106,5 @@
   answer: "flyr-fløy-har flydd/har fløyet"
 - question: "å vinne(to win)"
   answer: "vinner-vant-har vunnet"
-
-
+- question: "å angripe(to attack)"
+  answer: "angriper-angrep-har angrepet"
