--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -133,3 +133,12 @@
   answer: |
      an attacker
      Angriperene har blitt smartere → The attackers have become smarter
+
+- question: "forferdelig"
+  answer: |
+     terrible
+
+- question: "nøyaktig"
+  answer: |
+     exact
+     et nøyaktig tall → an exact number
