--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -147,3 +147,7 @@
   answer: |
      scary 
 
+- question: "verdenskrig"
+  answer: |
+     Den første verdenskrigen startet i 1914.
+     Den andre verdenskrigen sluttet i 1945.
