--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -151,3 +151,8 @@
   answer: |
      Den første verdenskrigen startet i 1914.
      Den andre verdenskrigen sluttet i 1945.
+
+- question: "anledning"
+  answer: |
+      occasion
+
