--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -149,6 +149,7 @@
 
 - question: "verdenskrig"
   answer: |
+     world war (krig=war)
      Den første verdenskrigen startet i 1914.
      Den andre verdenskrigen sluttet i 1945.
 
