--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -192,3 +192,9 @@
   answer: |
       catch/capture (fanger-fanget-har fanget)
       De fanget fisken i elva → They caught the fish in the river
+
+- question: "å forsvinne"
+  answer: |
+      to disappear (forsvinner-forsvant-har forsvunnet)
+      Han forsvant plutselig → He disappeared suddenly
+      Alle andre er forsvunnet → Everyone else has disappeared
