--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -198,3 +198,10 @@
       to disappear (forsvinner-forsvant-har forsvunnet)
       Han forsvant plutselig → He disappeared suddenly
       Alle andre er forsvunnet → Everyone else has disappeared
+
+- question: "verdensrommet"
+  answer: |
+      the universe/outer space 🚀
+      Astronauter reiser ut i verdensrommet → .. travel into space
+      Det finnes mange planeter i verdensrommet
+      en stjerne=star; et solsystem;en galakse; universet
