--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -205,3 +205,7 @@
       Astronauter reiser ut i verdensrommet → .. travel into space
       Det finnes mange planeter i verdensrommet
       en stjerne=star; et solsystem;en galakse; universet
+
+- question: "tilfeldig"
+  answer: |
+      random
