--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -8,3 +8,7 @@
   answer: "Vi kan ikke stole på dem / Ikke stol på noen."
 - question: "But one thing you never forget"
   answer: "Men én ting må du aldri glemme"
+- question: "in the middle of nowhere"
+  answer: "i midten av ingenssted"
+- question: "to keep what you promise"
+  answer: "Å holde hva man lover"
