--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -12,3 +12,5 @@
   answer: "i midten av ingenssted"
 - question: "to keep what you promise"
   answer: "Å holde hva man lover"
+- question: "to appreciate"
+  answer: "å sette pris på"
