--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -246,3 +246,9 @@
 - question: "En samling"
   answer: |
        a gathering
+
+- question: "rar"
+  answer: |
+    strange/weird/odd (rar-rarere-rarest)
+    Hun er rarere enn broren sin
+    et rart hus → a strange house
