--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -14,3 +14,5 @@
   answer: "Å holde hva man lover"
 - question: "to appreciate"
   answer: "å sette pris på"
+- question: "Jeg aner ikke"
+  answer: "I have no idea (I am clueless)"
