--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -14,5 +14,7 @@
   answer: "Å holde hva man lover"
 - question: "to appreciate"
   answer: "å sette pris på"
+- question: "and vice versa"
+  answer: "og motsatt"
 - question: "Jeg aner ikke"
   answer: "I have no idea (I am clueless)"
