--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -252,3 +252,13 @@
     strange/weird/odd (rar-rarere-rarest)
     Hun er rarere enn broren sin
     et rart hus → a strange house
+
+- question: "imot"
+  answer: |
+    against/opposed to/toward
+    Jeg er imot krig. → I am against war.
+    Han løp imot meg. → He ran toward me.
+    Jeg har ingenting imot deg. → I have nothing against you.
+    NOTR: It is a preposition
+
+
