--- a/flashcards-random.yaml
+++ b/flashcards-random.yaml
@@ -261,4 +261,8 @@
     Jeg har ingenting imot deg. → I have nothing against you.
     NOTR: It is a preposition
 
+- question: "sannheten"
+  answer: |
+    The truth
+    (related: ikke sant)
 
