--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -16,5 +16,5 @@
   answer: "å sette pris på"
 - question: "and vice versa"
   answer: "og motsatt"
-- question: "Jeg aner ikke"
-  answer: "I have no idea (I am clueless)"
+- question: "I have no idea (I am clueless)"
+  answer: "Jeg aner ikke"
