--- a/data/flashcards-uttrykk.yaml
+++ b/data/flashcards-uttrykk.yaml
@@ -18,3 +18,7 @@
   answer: "og motsatt"
 - question: "I have no idea (I am clueless)"
   answer: "Jeg aner ikke"
+- question: "for the most part(mostly)"
+  answer: "For det meste lager jeg mat hjemme"
+- question: "at least"
+  answer: "I det minste prøvde jeg"
