--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -29,3 +29,5 @@
     Huset er så stort som jeg trodde
     Hun løper så fort som hun kan (kunne)
     Barna leker så stille som de kan
+- question: "Do you want another one?"
+  answer: "Vil du ha en til?"
