--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -247,7 +247,7 @@
 - question: "En beskjed"
   answer: |
     a message
-    Gi meg beskjed om det passer → let me know if it suits you.”
+    Gi meg beskjed om det passer → let me know if it suits you.
 
 - question: "En ulykke"
   answer: |
