--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -37,3 +37,7 @@
   answer: "enten A eller B"
 - question: "neither A nor B" 
   answer: "verken A eller B"
+- question: “Who coming?/Who's in?/Who's joining?"
+  answer: "Hvem er med?"
+- question: “Raise your hand"
+  answer: "Rekk opp hånda!"
