--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -41,3 +41,5 @@
   answer: "Hvem er med?"
 - question: "Raise your hand"
   answer: "Rekk opp hånda!"
+- question: "I'll keep you posted"
+  answer: "Jeg holder deg oppdatert"
