--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -308,3 +308,10 @@
     Vi kjørte gjennom tunnelen → We drove through the tunnel  
     Han gikk gjennom hele boka → He went through the whole book  
     Hun kom seg gjennom en vanskelig tid → She got through a difficult time
+
+- question: "Hemmelig"
+  answer: |
+    secret/hidden
+    Kan du holde det hemmelig? → Can you keep it secret?
+    Et hemmelig sted / hemmelig møte
+    Han gjorde det i hemmelighet. → He did it in secret
