--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -315,3 +315,10 @@
     Kan du holde det hemmelig? → Can you keep it secret?
     Et hemmelig sted / hemmelig møte
     Han gjorde det i hemmelighet. → He did it in secret
+
+- question: "egen"
+  answer: |
+    own (egen-eget-egne)
+    mitt eget hus → my own house  
+    hun har sin egen bedrift → she has her own company  
+    vi har våre egne meninger → we have our own opinions
