--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -263,6 +263,13 @@
     Hun er rarere enn broren sin
     et rart hus → a strange house
 
+- question: "å røre"
+  answer: |
+    to touch (physically)/to stir/mix (rører-rørte-har rørt)
+    Ikke rør! → Don't touch!
+    Hun rørte kaffen. → She stirred the coffee.
+    Han ble rørt til tårer. → He was moved to tears.
+
 - question: "imot"
   answer: |
     against/opposed to/toward (preposition)
