--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -43,3 +43,5 @@
   answer: "Rekk opp hånda!"
 - question: "I'll keep you posted"
   answer: "Jeg holder deg oppdatert"
+- question: "We dont have a choice"
+  answer: "Vi har ikke noe valg"
