--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -45,3 +45,5 @@
   answer: "Jeg holder deg oppdatert"
 - question: "We dont have a choice"
   answer: "Vi har ikke noe valg"
+- question: "believe me"
+  answer: "Tro meg./Jeg sier deg, tro meg"
