--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -47,3 +47,5 @@
   answer: "Vi har ikke noe valg"
 - question: "believe me"
   answer: "Tro meg./Jeg sier deg, tro meg"
+- question: "not willingly"
+  answer: "Ikke frivillig"
