--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -329,3 +329,9 @@
     mitt eget hus → my own house  
     hun har sin egen bedrift → she has her own company  
     vi har våre egne meninger → we have our own opinions
+
+- question: "å prate"
+  answer: |
+    to talk / to chat (prater-pratet-har pratet)
+    Vi prater om været. → “We are chatting about the weather.”
+    Han liker å prate med folk → He likes to talk with people
