--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -335,3 +335,10 @@
     to talk / to chat (prater-pratet-har pratet)
     Vi prater om været. → “We are chatting about the weather.”
     Han liker å prate med folk → He likes to talk with people
+
+- question: "å bry"
+  answer: |
+    to care/to mind (bryr-brydde-har brydd)
+    å bry seg om (to care about)
+    Jeg bryr meg om miljøet → I care about the environment
+    Hun brydde seg om vennene sine
