--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -342,3 +342,10 @@
     å bry seg om (to care about)
     Jeg bryr meg om miljøet → I care about the environment
     Hun brydde seg om vennene sine
+
+- question: "å sparke"
+  answer: |
+    to kick (sparker-sparket-har sparket)
+    styret valgte å sparke meg → The board decided to kick(fire) me.
+  
+  
