--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -347,5 +347,9 @@
   answer: |
     to kick (sparker-sparket-har sparket)
     styret valgte å sparke meg → The board decided to kick(fire) me.
-  
-  
+
+- question: "å godkjenne"
+  answer: |
+    to approve / to authorize (godkjenner-godkjente-har godkjent)
+    Kan du godkjenne det → can you approve it
+    
