--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -49,3 +49,5 @@
   answer: "Tro meg./Jeg sier deg, tro meg"
 - question: "not willingly"
   answer: "Ikke frivillig"
+- question: "to improve my skills"
+  answer: "for å forbedre ferdighetene mine"
