--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -51,3 +51,5 @@
   answer: "Ikke frivillig"
 - question: "to improve my skills"
   answer: "for å forbedre ferdighetene mine"
+- question: "Even though I am often tired, mornings make me happy."
+  answer: "Selv om jeg ofte er trøtt, gjør morgenen meg glad."
