--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -53,3 +53,5 @@
   answer: "for å forbedre ferdighetene mine"
 - question: "Even though I am often tired, mornings make me happy."
   answer: "Selv om jeg ofte er trøtt, gjør morgenen meg glad."
+- question: "A few years ago"
+  answer: "For noen år siden"
