--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -353,3 +353,8 @@
     to approve / to authorize (godkjenner-godkjente-har godkjent)
     Kan du godkjenne det → can you approve it
     
+- question: "en opplevelse"
+  answer: |
+    an experience, memorable (opplevelsen-opplevelser-opplevelsene)
+    Erfaring = experience (skills); opplevelse = memorable event
+    det ble en av de beste opplevelsene i livet mitt → it became one of the best experiences of my life.
