--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -355,7 +355,7 @@
     
 - question: "en opplevelse"
   answer: |
-    an experience, memorable (opplevelsen-opplevelser-opplevelsene)
+    an experience (opplevelsen-opplevelser-opplevelsene)
     Erfaring = experience (skills); opplevelse = memorable event
     det ble en av de beste opplevelsene i livet mitt → it became one of the best experiences of my life.
   
