--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -55,3 +55,5 @@
   answer: "Selv om jeg ofte er trøtt, gjør morgenen meg glad."
 - question: "A few years ago"
   answer: "For noen år siden"
+- question: "made it unforgettable"
+  answer: "gjorde det uforglemmelig"
