--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -359,3 +359,7 @@
     Erfaring = experience (skills); opplevelse = memorable event
     det ble en av de beste opplevelsene i livet mitt → it became one of the best experiences of my life.
   
+- question: "å utforske"
+  answer: |
+    to explore (utforsker-utforsket-har utforsket)
+    I fremtiden vil jeg utforske flere land i Europa → I future I want to explore many countries in europe
