--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -356,6 +356,7 @@
 - question: "en opplevelse"
   answer: |
     an experience (opplevelsen-opplevelser-opplevelsene)
+    to experience (å oppleve-opplever-opplevde-har opplevd)
     Erfaring = experience (skills); opplevelse = memorable event
     det ble en av de beste opplevelsene i livet mitt → it became one of the best experiences of my life.
   
