--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -369,3 +369,9 @@
   answer: |
     to invent (oppfinner-oppfant-har oppfunnet)
     James Watt oppfant dampmaskinen
+
+- question: "å utvide"
+  answer: |
+    to expand / extend / widen (utvider-utvidet-har utvidet)
+    å utvide en åpning → to widen an opening
+    Vi må utvide virksomheten → We need to expand the business
