--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -375,3 +375,11 @@
     to expand / extend / widen (utvider-utvidet-har utvidet)
     å utvide en åpning → to widen an opening
     Vi må utvide virksomheten → We need to expand the business
+
+- question: "å oversette"
+  answer: |
+    to translate (oversetter-oversatte-har oversatt
+    boken er oversatt til mange språk
+
+
+
