--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -387,3 +387,8 @@
     Kan du gjette hva som skjedde? → Can you guess what happened?
     Jeg bare gjetter → I'm just guessing
 
+- question: "å forberede"
+  answer: |
+    to prepare (forbereder-forberedte-har forberedt)
+    De forbereder maten til festen → They are preparing the food for the party
+
