--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -378,7 +378,7 @@
 
 - question: "å oversette"
   answer: |
-    to translate (oversetter-oversatte-har oversatt
+    to translate (oversetter-oversatte-har oversatt)
     boken er oversatt til mange språk
 
 - question: "å gjette"
