--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -392,3 +392,10 @@
     to prepare (forbereder-forberedte-har forberedt)
     De forbereder maten til festen → They are preparing the food for the party
 
+- question: "virkelig"
+  answer: |
+    really/truly/indeed
+    Det er virkelig sant → It is really true
+    Jeg liker virkelig denne filmen → I really like this movie
+    Virkelig? → Really?
+
