--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -399,3 +399,19 @@
     Jeg liker virkelig denne filmen → I really like this movie
     Virkelig? → Really?
 
+- question: "å tenne"
+  answer: |
+    to light/ignite/turn on (tenner-tente-har tent)
+    å tenne en fyrstikk → to light a match
+    å tenne på bålet → to light the match/bonfire
+    å tenne opp i peisen/ovnen → to light up the fireplace/stove
+    Læreren tente gnisten hos elevene → The teacher sparked the students interest
+
+- question: "å tjene"
+  answer: |
+    to serve/to earn(tjener-tjente-har tjent)
+    Han tjener mye penger → He earns a lot of money
+    Jeg vil tjene samfunnet → I want to serve society
+    tjeneste=service (Han gjør en god tjeneste for samfunnet)
+
+
