--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -402,10 +402,9 @@
 - question: "å tenne"
   answer: |
     to light/ignite/turn on (tenner-tente-har tent)
-    å tenne en fyrstikk → to light a match
-    å tenne på bålet → to light the match/bonfire
-    å tenne opp i peisen/ovnen → to light up the fireplace/stove
-    Læreren tente gnisten hos elevene → The teacher sparked the students interest
+    å tenne på bålet → to light the /bonfire
+    å tenne opp i peisen/ovnen
+    Læreren tente gnisten hos elevene
 
 - question: "å tjene"
   answer: |
