--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -413,5 +413,9 @@
     Jeg vil tjene samfunnet → I want to serve society
     tjeneste=service (Han gjør en god tjeneste for samfunnet)
 
-
-
+- question: "å forvirre"
+  answer: |
+    to confuse (forvirrer-forvirret-har forvirret)
+    det fovirrer mange
+    Jeg ble helt forvirret 
+    (forvirring=confusion)
