--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -419,3 +419,11 @@
     det fovirrer mange
     Jeg ble helt forvirret 
     (forvirring=confusion)
+
+- question: "å overraske"
+  answer: |
+    to surprise (overrasker-overrasket-har overrasket)
+    Han overrasket henne med blomster
+    Jeg ble overrasket over resultatet
+    gaven skal være en overraskelse
+    (en overraskelse=a surprise)
