--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -57,3 +57,26 @@
   answer: "For noen år siden"
 - question: "made it unforgettable"
   answer: "gjorde det uforglemmelig"
+- question: "At that time"
+  answer: "På den siden"
+- question: "Eventually"
+  answer: "Etter Hvert"
+- question: "In the meantim"
+  answer: "I mellomtiden"
+- question: "Amidst all this"
+  answer: "Midt i alt dette"
+- question: "Unexpectedly"
+  answer: "Uventet"
+- question: "Along the way"
+  answer: "Underveis"
+- question: "To my surprise"
+  answer: "Til min overraskelse"
+- question: "Because of this"
+  answer: "På grunn av dette"
+- question: "On the other hand"
+  answer: "På den andre siden"
+- question: "Meanwhile"
+  answer: "Samtidig"
+- question: "In the end"
+  answer: "Til Slutt"
+
