--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -79,4 +79,7 @@
   answer: "Samtidig"
 - question: "In the end"
   answer: "Til Slutt"
+- question: "Et par ganger"
+  answer: "A couple of times (Han ringte meg et par ganger i går)"
+
 
